@@ -33,6 +33,14 @@
 
 #include <string.h>
 #include <libgen.h>
+#include <stdio.h>
+#include <errno.h>
+
+/****************************************************************************/
+
+#ifndef _STDLIB_PROTOS_H
+#include "stdlib_protos.h"
+#endif /* _STDLIB_PROTOS_H */
 
 /****************************************************************************/
 
@@ -45,9 +53,12 @@
 /****************************************************************************/
 
 char *
-basename(char *path)
+basename(const char *path)
 {
-	char * result;
+	static char new_path[MAXPATHLEN];
+	char * result = NULL;
+	const char * str;
+	size_t len;
 
 	ENTER();
 
@@ -58,12 +69,11 @@ basename(char *path)
 
 	if(path == NULL || path[0] == '\0')
 	{
-		result = (char *)".";
+		str = ".";
+		len = 1;
 	}
 	else
 	{
-		int len,i;
-
 		len = strlen(path);
 
 		while(len > 0 && path[len-1] == '/')
@@ -71,26 +81,45 @@ basename(char *path)
 
 		if(len > 0)
 		{
-			result = path;
+			size_t i;
 
-			path[len] = '\0';
+			str = path;
 
-			for(i = len-1 ; i >= 0 ; i--)
+			for(i = len - 1 ; ; i--)
 			{
 				if(path[i] == '/')
 				{
-					result = &path[i+1];
+					len -= i;
+
+					str = &path[i+1];
 					break;
 				}
+
+				if(i == 0)
+					break;
 			}
 		}
 		else
 		{
-			result = (char *)"/";
+			str = "/";
+			len = 1;
 		}
 	}
 
+	if(len + 1 > sizeof(MAXPATHLEN))
+	{
+		__set_errno(ENAMETOOLONG);
+		goto out;
+	}
+
+	memcpy(new_path,str,len);
+	new_path[len] = '\0';
+
+	result = new_path;
+
 	SHOWSTRING(result);
+
+ out:
 
 	RETURN(result);
 	return(result);
